
 - Extended Linux systemd support with optional notifications about daemon
   state (READY, RELOADING, STOPPING) and watchdog keep-alive messages [#1590]

 - Extended Linux systemd units with aliases named after the daemons:
   `nut-server.service` as `upsd.service`, and `nut-monitor.service` as
   `upsmon.service` (so simple `systemctl reload upsd` can work) [#1777]

 - Numerous daemons (`upsd`, `upsmon`, drivers, `upsdrvctl`, `upssched`)
   which accepted `-D` option for debug setting previously, now can also
   honour a `NUT_DEBUG_LEVEL=NUM` environment variable if no `-D` arguments
   were provided. Unlike those arguments, the environment variable does
   not enforce that daemons run in foreground mode by default [#1915]

 - Implemented generic support for INSTCMD and SETVAR use-cases shared by
   all drivers, and in particular to see and change active debug verbosity
   using the driver-server and server-client protocol (at higher priority
   than CLI or config file choices) per [#1285], e.g.
------
# Set verbosity level 6:
:; upsrw -s driver.debug=6 UPS

# Set verbosity level 0 to disable the noise (even if debug_min is set):
:; upsrw -s driver.debug=0 UPS1@localhost

# Un-set the protocol override, honour CLI or config-file settings again:
:; upsrw -s driver.debug=-1 remoteUPS@1.2.3.4
------
+
and a `driver.killpower` instant command (for safety, must be unlocked by
   `driver.flag.allow_killpower` protocol setting or `allow_killpower`
   configuration flag) [#1917]

 - Implemented basic support for `ups.conf` reloading in NUT drivers,
   currently limited to `SIGHUP` handling and with a goal of changing
   `debug_min` setting for a running driver. As currently implemented,
   would not fully benefit the drivers on systems managed by real-time
   `nut-driver-enumerator` (it needs to be taught to play well) [#1903]

 - Drivers should now accept `SIGUSR1` to dump their current state information